Add track resolver/prefetch and playback refactor
Introduce track resolution and prefetching services and refactor playback flow for more efficient queueing and smoother UI.

Key changes:
- Added ITrackResolverService and ITrackPrefetchService plus concrete TrackResolverService and TrackPrefetchService implementations.
- PlayerService now resolves the first track immediately and resolves remaining tracks in parallel via the resolver, building CustomTrackQueueItem instances with SourceTrack and TrackReference.
- CustomLavaLinkPlayer triggers background artwork prefetching.
- CustomTrackQueueItem simplified to hold a SourceTrack and compatibility accessors for existing UI code.
- ImageBuilder and VisualPlayer updated to accept an ITrackPrefetchService and use cached artwork when available.
- PlexMusicService: added GetAllArtistTracksAsync, improved caching for tracks/playlists, and switched duration formatting to Utils.FormatHelper.
- IPlexMusicService signature updated to include GetAllArtistTracksAsync; Utils.FormatHelper added.
- MusicCommands/MusicInteractionsHandler updated to use FormatHelper, the new resolver/get-all-tracks APIs, and improved YouTube handling and cooldown pruning.
- Service registration updated to register resolver/prefetch services.
- Added README and docker-compose notes for optional JVM/CPU tuning to mitigate audio stuttering.

These changes aim to reduce duplicate Lavalink calls, pre-warm artwork, speed up playlist/artist enqueue operations, and improve user-facing feedback during large imports.